--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "clipboard": "2.0.4",
     "codemirror": "5.45.0",
     "core-js": "^3.19.0",
+    "cos-js-sdk-v5": "^1.4.5",
     "driver.js": "0.9.7",
     "dropzone": "5.5.1",
     "echarts": "^5.1.2",
@@ -52,7 +53,6 @@
     "vuedraggable": "2.20.0",
     "vuex": "3.1.0",
     "xlsx": "0.14.1"
-
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "4.4.4",
